<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample_home"
    tools:context=".SampleHomeActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
	
	<TextView 
                android:id="@+id/sample_home_choose_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_choose"
        		android:textColor="#FFFFFF"
        		android:textSize="32sp"
				android:layout_gravity="center_horizontal"
                />
	
    <LinearLayout
		android:id="@+id/sample_home_choose_ui"
		android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
		>
		
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            >
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_reception_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_reception"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_reception_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_reception"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_waitreception_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_waitreception"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_waitreception_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_waitreception"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_showroom_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_showroom"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_showroom_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_showroom"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
    	    
    	</LinearLayout>
    	
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            >
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_bedroom_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_bedroom"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_bedroom_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_bedroom"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_smallgarden_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_smallgarden"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_smallgarden_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_smallgarden"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_bathroom_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_bathroom"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_bathroom_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_bathroom"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
    	    </LinearLayout>
    	</LinearLayout>
    	
    	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            >
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_kitchen_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_kitchen"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_kitchen_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_kitchen"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
			android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_home_attic_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_home_attic"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_home_attic_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_attic"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
    	    </LinearLayout>
    	</LinearLayout>
                   
	</LinearLayout>
    
    <TableRow 
        android:id="@+id/sample_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">
        
        <ImageButton 
            android:id="@+id/sample_home_common_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_common"
        	android:contentDescription="@string/desc"
            />
        <ImageButton 
            android:id="@+id/sample_home_page_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_page"
        	android:contentDescription="@string/desc"
            />
        <ImageButton 
            android:id="@+id/sample_home_choose_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_choose"
        	android:contentDescription="@string/desc"
            />
    </TableRow>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
<!-- 
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>
    </FrameLayout>
 -->
</FrameLayout>
