<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample_home"
    tools:context=".SampleHomeActivity" >

    <TextView
        android:id="@+id/sample_home_waitreception_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_waitreception"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/sample_home_waitreception_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_light_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_light"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_light_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_light"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_curtain_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_curtain"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_curtain_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_curtain"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_music_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_music"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_music_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_music"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_tv_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_tv"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_tv_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_tv"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_tvbox_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_tvbox"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_tvbox_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_tvbox"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_condition_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_condition"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_condition_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_condition"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_safe_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_safe"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_safe_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_safe"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_control_blue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sample_control_blue"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_control_blue_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/control_blue"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/sample_image_guide"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/mapicon"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/sample_text_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="定位"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TableRow
        android:id="@+id/sample_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal" >

        <ImageButton
            android:id="@+id/sample_home_common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sample_home_common"
            android:contentDescription="@string/desc" />

        <ImageButton
            android:id="@+id/sample_home_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sample_home_page"
            android:contentDescription="@string/desc" />

        <ImageButton
            android:id="@+id/sample_home_choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sample_home_choose"
            android:contentDescription="@string/desc" />
    </TableRow>

</FrameLayout>