<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample_home"
    tools:context=".SampleHomeActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
	<TextView 
                android:id="@+id/sample_home_showroom_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/home_showroom"
        		android:textColor="#FFFFFF"
        		android:textSize="32sp"
				android:layout_gravity="center_horizontal"
                />
	
	<LinearLayout
	    android:id="@+id/sample_home_light_seekbar"
		android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
		>
		<SeekBar
        	android:id="@+id/home_light_seekbar"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:max="100" 
			android:progress="40" />
		<TextView 
			android:id="@+id/home_light_progress" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			/> 
		</LinearLayout>
		
    <LinearLayout
		android:id="@+id/sample_home_showroom_ui"
		android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:gravity="center|center_horizontal|center_vertical"
        android:layout_gravity="center|center_horizontal|center_vertical"
		>
		
    	<LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_control_light_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_control_light"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_control_light_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/control_light"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_control_curtain_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_control_curtain"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_control_curtain_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/control_curtain"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
          	</LinearLayout>
       <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@android:color/transparent"
            android:layout_marginLeft="24dp"
            >
            <ImageButton 
                android:id="@+id/sample_control_projector_button"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:background="@drawable/sample_control_projector"
        		android:contentDescription="@string/desc"                
                />
            <TextView 
                android:id="@+id/sample_control_projector_textview"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/control_projector"
        		android:textColor="#000000"
        		android:gravity="center"
        		android:textSize="18sp"
                />
            </LinearLayout>
    	    
    	
                   
	</LinearLayout>
    
    <TableRow 
        android:id="@+id/sample_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">
        
        <ImageButton 
            android:id="@+id/sample_home_common_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_common"
        	android:contentDescription="@string/desc"
            />
        <ImageButton 
            android:id="@+id/sample_home_page_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_page"
        	android:contentDescription="@string/desc"
            />
        <ImageButton 
            android:id="@+id/sample_home_choose_button"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/sample_home_choose"
        	android:contentDescription="@string/desc"
            />
    </TableRow>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
<!-- 
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>
    </FrameLayout>
 -->
</FrameLayout>
